k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  namespace: default
  labels:
    app: hello-app
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
