k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-app-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
